# docling-parse

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/scripts/: build_rhel.sh
.github/workflows/: cd.yml  checks.yml  rhel.yml  wheels.yml
cmake/: extlib_qpdf_v11.cmake  extlib_utf8.git.cmake
external-libs/lib-msvc32/: jpeg.lib  z.lib
external-libs/lib-msvc64/: jpeg.lib  z.lib
src/: include_libs.h  utils.h
src/proj_folders/: pdf_library.h
src/proj_folders/pdf_library/core/tools/: writer.h
src/utils/logging_library/: logger.h
src/utils/system_library/: file_operations.h
windows-libs/external-libs/include/openssl/: configuration.h
