[project]
name = "docling-parse"
version = "4.0.4"
description = "Simple package to extract text with coordinates from programmatic PDFs"
authors = [
    {name = "Peter Staar", email = "taa@zurich.ibm.com"},
]
maintainers = [
    {name = "Peter Staar", email = "taa@zurich.ibm.com"},
    {name = "Christoph Auer", email = "cau@zurich.ibm.com"},
    {name = "Michele Dolfi", email = "dol@zurich.ibm.com"},
    {name = "Panos Vagenas", email = "pva@zurich.ibm.com"},
    {name = "Maxim Lysak", email = "mly@zurich.ibm.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["docling", "pdf", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "tabulate>=0.9.0,<1.0.0",
    "pillow>=10.0.0,<12.0.0",
    "pydantic>=2.0.0",
    "docling-core>=2.23.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black[jupyter]>=24.4.2",
    "python-semantic-release>=7.32.2",
    "pre-commit>=3.7.1",
    "isort>=5.10.1",
    "mypy>=1.13.0",
    "tqdm>=4.67.0",
    "boto>=2.49.0",
    "boto3>=1.35.67",
    "autoflake>=2.3.1"
]
build = [
    "cibuildwheel>=2.19.2",
    "wheel>=0.43.0",
    "delocate>=0.11.0"
]
test = [
    "pytest>=7.4.2"
]

[project.urls]
Repository = "https://github.com/docling-project/docling-parse"
Homepage = "https://github.com/docling-project/docling-parse"

[build-system]
requires = ["setuptools>=61", "pybind11>=2.13.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
default-groups = "all"

[tool.setuptools.packages.find]
include = ["docling*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
preview = true

[tool.isort]
profile = "black"
line_length = 88
py_version = 310
multi_line_output = 3
include_trailing_comma = true

[tool.autoflake]
in-place = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-unused-variables = true
expand-star-imports = true
recursive = true

[tool.mypy]
pretty = true
no_implicit_optional = true
namespace_packages = true
show_error_codes = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["tabulate.*", "botocore.*", "boto3.*"]
ignore_missing_imports = true

[tool.semantic_release]
version_source = "tag_only"
branch = "main"
parser_angular_allowed_types = "build,chore,ci,docs,feat,fix,perf,style,refactor,test"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf"
